# location_history

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  shell.nix
src/: lib.rs  main.rs
