[package]
authors = ["Eric Trombly <etrombly@yahoo.com>", "Leigh Oliver <leighcharlesoliver@gmail.com>"]
description = "Google Takeout Records.json Parser"
homepage = "https://github.com/etrombly/location_history.git"
license = "MIT OR Apache-2.0"
keywords = ["google", "location", "history", "tracking"]
name = "location_history"
readme = "README.md"
repository = "https://github.com/leighleighleigh/location_history.git"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
colored = "2.1.0"
prettytable = "0.10.0"
struson = { version = "0.3.0", features = ["serde"] }
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
spinner = "0.5.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_derive = "1.0.193"
